# rusty-time

./: .gitignore  Cargo.toml  README.md  main.rs  note1-task1.org  note1-task1a-1.org  note1-task1a-2.org  note1-task1a-3.org  note1-task1a-4-ai-birth-trauma.org  note1-task1a-4.org  note1-task1a.org  note1.org  plan.org  plan1.org  plan2.org  plan3.org  plan4.org
src/: main.2.org  main.org  main.rs  main1.rs  main2.rs
